added hardcoded admin because there are lots of endpoints to manage