@@ -1,105 +1,103 @@
 package com.pravin.job_portal_backend.service.recruiter;
 
-import com.pravin.job_portal_backend.dto.ricruitors_dtos.RecruiterDTO;
+import com.pravin.job_portal_backend.dto.ricruitors_dtos.RecruiterResponseDTO;
 import com.pravin.job_portal_backend.entity.Company;
 import com.pravin.job_portal_backend.entity.Recruiter;
 import com.pravin.job_portal_backend.entity.User;
+import com.pravin.job_portal_backend.enums.CompanyStatus;
+import com.pravin.job_portal_backend.exception.BadRequestException;
+import com.pravin.job_portal_backend.exception.NotFoundException;
+import com.pravin.job_portal_backend.mapper.recruiter_mapper.RecruiterMapper;
 import com.pravin.job_portal_backend.repository.CompanyRepository;
 import com.pravin.job_portal_backend.repository.RecruiterRepository;
 import com.pravin.job_portal_backend.repository.UserRepository;
-
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class RecruiterServiceImpl implements RecruiterService {
 
-    private final RecruiterRepository recruiterRepository;
-    private final CompanyRepository companyRepository;
-    private final UserRepository userRepository;
+    private final RecruiterRepository recruiterRepo;
+    private final UserRepository userRepo;
+    private final CompanyRepository companyRepo;
 
     @Override
-    public RecruiterDTO createRecruiter(RecruiterDTO dto) {
-        User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new RuntimeException("User not found with id " + dto.getUserId()));
-        Company company = companyRepository.findById(dto.getCompanyId())
-                .orElseThrow(() -> new RuntimeException("Company not found with id " + dto.getCompanyId()));
+    public RecruiterResponseDTO createRecruiter(Long userId) {
+        User user = userRepo.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found: " + userId));
+
+        if (recruiterRepo.existsByUser_Id(userId)) {
+            throw new BadRequestException("Recruiter already exists for user");
+        }
 
         Recruiter recruiter = Recruiter.builder()
                 .user(user)
-                .company(company)
+                .company(null)
                 .build();
 
-        return mapToDTO(recruiterRepository.save(recruiter));
+        recruiter = recruiterRepo.save(recruiter);
+        return RecruiterMapper.toResponseDTO(recruiter);
     }
 
     @Override
-    public List<RecruiterDTO> getAllRecruiters() {
-        return recruiterRepository.findAll().stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
-    }
+    public RecruiterResponseDTO assignRecruiterToCompany(Long recruiterId, Long companyId, Long adminUserId) {
+        Recruiter recruiter = recruiterRepo.findById(recruiterId)
+                .orElseThrow(() -> new NotFoundException("Recruiter not found: " + recruiterId));
+        Company company = companyRepo.findById(companyId)
+                .orElseThrow(() -> new NotFoundException("Company not found: " + companyId));
 
-    @Override
-    public RecruiterDTO getRecruiterById(Long id) {
-        return recruiterRepository.findById(id)
-                .map(this::mapToDTO)
-                .orElseThrow(() -> new RuntimeException("Recruiter not found with id " + id));
-    }
-
-    @Override
-    public RecruiterDTO updateRecruiter(Long id, RecruiterDTO dto) {
-        Recruiter recruiter = recruiterRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Recruiter not found with id " + id));
-
-        if (dto.getUserId() != null) {
-            User user = userRepository.findById(dto.getUserId())
-                    .orElseThrow(() -> new RuntimeException("User not found with id " + dto.getUserId()));
-            recruiter.setUser(user);
+        if (company.getStatus() != CompanyStatus.APPROVED) {
+            throw new BadRequestException("Cannot assign recruiter to a non-approved company");
         }
 
-        if (dto.getCompanyId() != null) {
-            Company company = companyRepository.findById(dto.getCompanyId())
-                    .orElseThrow(() -> new RuntimeException("Company not found with id " + dto.getCompanyId()));
-            recruiter.setCompany(company);
-        }
-
-        return mapToDTO(recruiterRepository.save(recruiter));
+        recruiter.setCompany(company);
+        return RecruiterMapper.toResponseDTO(recruiter);
     }
 
     @Override
-    public void deleteRecruiter(Long id) {
-        recruiterRepository.deleteById(id);
+    public RecruiterResponseDTO getRecruiter(Long recruiterId) {
+        Recruiter recruiter = recruiterRepo.findById(recruiterId)
+                .orElseThrow(() -> new NotFoundException("Recruiter not found: " + recruiterId));
+        return RecruiterMapper.toResponseDTO(recruiter);
     }
 
-    // 🔹 Extra methods
-
     @Override
-    public List<RecruiterDTO> getRecruitersByCompany(Long companyId) {
-        Company company = companyRepository.findById(companyId)
-                .orElseThrow(() -> new RuntimeException("Company not found with id " + companyId));
+    public List<RecruiterResponseDTO> listByCompany(Long companyId) {
+        Company company = companyRepo.findById(companyId)
+                .orElseThrow(() -> new NotFoundException("Company not found: " + companyId));
+
         return company.getRecruiters().stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(RecruiterMapper::toResponseDTO)
+                .toList();
     }
 
     @Override
-    public RecruiterDTO getRecruiterByUserId(Long userId) {
-        Recruiter recruiter = recruiterRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Recruiter not found for userId " + userId));
-        return mapToDTO(recruiter);
+    public RecruiterResponseDTO removeRecruiterFromCompany(Long recruiterId, Long adminUserId) {
+        Recruiter recruiter = recruiterRepo.findById(recruiterId)
+                .orElseThrow(() -> new NotFoundException("Recruiter not found: " + recruiterId));
+
+        recruiter.setCompany(null);
+        return RecruiterMapper.toResponseDTO(recruiter);
     }
 
-    // 🔹 Mapper
-    private RecruiterDTO mapToDTO(Recruiter recruiter) {
-        return RecruiterDTO.builder()
-                .id(recruiter.getId())
-                .userId(recruiter.getUser() != null ? recruiter.getUser().getId() : null)
-                .companyId(recruiter.getCompany() != null ? recruiter.getCompany().getId() : null)
-                .build();
+    @Override
+    public void deleteRecruiter(Long recruiterId, Long adminUserId) {
+        Recruiter recruiter = recruiterRepo.findById(recruiterId)
+                .orElseThrow(() -> new NotFoundException("Recruiter not found: " + recruiterId));
+        recruiterRepo.delete(recruiter);
     }
+
+    @Override
+    public List<RecruiterResponseDTO> listAllRecruiters() {
+        return recruiterRepo.findAll().stream()
+                .map(RecruiterMapper::toResponseDTO)
+                .toList();
+    }
+
 }
